# stereo_calib_lib

./: CMakeLists.txt  README.md
include/: complete_stereo_calib_lib.h  spherical_multiple_filter_stereo_calib_lib.h  spherical_stereo_calib_lib.h  stereo_calib_lib.h
include/features/: featuresBase.h  featuresSIFT.h  featuresSIMULATED.h
include/filter/: EKF.h  EKFBase.h  Jacobians.h  Kinematics.h  Rodrigues.h  VisualOdometry_Base.h  calibrationDynamicStereoCameras.h  calibrationSphericalMultipleFilterStereoCameras.h  calibrationSphericalStereoCameras.h  calibrationStereoCameras.h
include/images/: imagesBase.h
include/plot/: Plot.h  plot.hpp.original
include/tools/: EyesStereoModel.h  PointCloudViewer.h  PointsWeight.h  ToString.h
src/: complete_stereo_calib_lib.cpp  spherical_multiple_filter_stereo_calib_lib.cpp  spherical_stereo_calib_lib.cpp  stereo_calib_lib.cpp
src/features/: featuresSIFT.cpp  featuresSIMULATED.cpp
src/filter/: EKF.cpp  EKFBase.cpp  Jacobians.cpp  Kinematics.cpp  Rodrigues.cpp  VisualOdometry_Base.cpp  calibrationDynamicStereoCameras.cpp  calibrationSphericalMultipleFilterStereoCameras.cpp  calibrationSphericalStereoCameras.cpp  calibrationStereoCameras.cpp
src/images/: imagesBase.cpp
src/plot/: Plot.cpp  plot.cpp.original
src/tools/: EyesStereoModel.cpp  PointCloudViewer.cpp  PointsWeight.cpp  ToString.cpp
